--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -3,7 +3,7 @@
 </div>
 <!-- new landing header start -->
 <header scroll id="header" class="navbar-static-top style2">
-	<div class="topnav">
+	<!-- <div class="topnav">
 		<div class="container">
 			<ul class="quick-menu pull-right clearfix">
 				<li class="menu-item-has-children pointerhover">
@@ -11,7 +11,7 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div> -->
 	<div class="animated" ng-class="{'fadeInDown header-on-scroll': boolChangeClass}">
 		<div class="top-header landing-top-header">
 			<nav class="navbar no-border">
