--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -498,8 +498,8 @@
 	<div class="bottom gray-area">
 		<div class="container">
 			<div class="logo pull-left">
-				<a href="#" title="Marketplace - Home">
-					<img src="assets/images/logo.png" />
+				<a ui-sref="home" title="Marketplace - Home">
+					<h4 class="big-font">MARKET<span class="orange-color">PLACE</span></h4>
 				</a>
 			</div>
 			<div class="pull-right">
