--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -97,14 +97,14 @@
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a ui-sref="main.equiDetails({id:pro.id})" class="pull-left">
-							<i class="fa fa-eye" ui-sref="main.equiDetails({id:pro.id})"></i>
+						<a class="btn small-btn secondary-btn pull-left" ui-sref="main.equiDetails({id:pro.id})">
+							View
 						</a>
-						<a ng-click="edit(pro)" class="text">
-							<i class="fa fa-pencil-square-o" ng-click="edit(pro)"></i>
+						<a class="btn small-btn secondary-btn" ng-click="edit(pro)" class="text">
+							Edit
 						</a>
-						<a ng-click="delete(pro)" class="pull-right">
-							<i class="fa fa-archive" ng-click="delete(pro)"></i>
+						<a ng-click="delete(pro)" class="btn small-btn secondary-btn pull-right">
+							Delete
 						</a>
 					</div>
 				</div>
