--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -83,7 +83,7 @@
 						<a href="" class="pull-left btn small-btn secondary-btn">
 							View
 						</a>
-						<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})" class="text btn small-btn secondary-btn">
+						<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})" class="btn small-btn secondary-btn">
 							Edit
 						</a>
 						<a href="" class="pull-right btn small-btn secondary-btn">
