--- a/src/app/views/seller-account/settings/shipping/shipping.html
+++ b/src/app/views/seller-account/settings/shipping/shipping.html
@@ -48,10 +48,10 @@
 		<div class="devider"></div>
 	</div>
 	<div class="col-xs-12" ng-if="!rule.edit">
-		<button class="clickable-icon pointerhover btn small-btn secondary-btn" ng-click="shippingMdl.edit(rule)">
+		<button class="btn small-btn secondary-btn" ng-click="shippingMdl.edit(rule)">
 			Edit
 		</button>
-		<button class="clickable-icon pointerhover pull-right btn small-btn secondary-btn" ng-click="shippingMdl.delete(rule)">
+		<button class="pull-right btn small-btn secondary-btn" ng-click="shippingMdl.delete(rule)">
 			Delete
 		</button>
 	</div>
