--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -283,7 +283,7 @@ select option { padding: 2px 10px; }
 
 /* 2.1.4. Form */
 form {
-  label { text-transform: uppercase; display: block; margin-bottom: 5px; font-weight: normal; font-size: 0.9167em; }
+  label { display: block; margin-bottom: 5px; font-weight: normal; font-size: 0.9167em; }
   .checkbox label, label.checkbox { font-size: 1.0833em; text-transform: none; }
   .radio label, label.radio { font-size: 0.9167em; }
   .form-group { margin-bottom: 8px; }
@@ -5751,6 +5751,8 @@ button.btn {
   h3 {
     margin-top: 10px;
     color: #ffffff;
+    font-size: 14px;
+    text-align: left;
   }
   p {
     margin-bottom: 10px;
@@ -6067,13 +6069,13 @@ section {
             margin-top: 30px;
             margin-bottom: 0;
             color: #009ddc;
+            text-align: right;
             a {
               &:last-child {
                 // margin-left: 30px;
               }
               &:first-child {
                 margin-right: 10px;
-                float: right;
                 font-size: 16px;
               }
             }
@@ -6918,5 +6920,20 @@ section {
 .search-btn-div {
   a {
     margin-top: 10px;
+  }
+}
+
+.modal-content {
+  margin-top: 18%;
+}
+
+.cart-summary {
+  figure {
+    padding: 10px !important;
+    transition: all 0.6s ease;
+    &:hover {
+      background-color: #eeeeee;
+      cursor: pointer;
+    }
   }
 }
