--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -73,7 +73,6 @@
 		</div>
 	<!-- </div> -->
 </div>
-<div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider devider-bottom">
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col" ng-repeat="item in mdl.invoice.items">
@@ -95,7 +94,7 @@
 				<p>Additional <span class="pull-right">$230</span></p>
 			</div>
 		</div>
-		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
+		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs no-padding">
 			<h4>${{item.subtotal | number}}</h4>
 		</div>
 	</div>
@@ -116,4 +115,3 @@
 			</div>
 		</div>
 	</div>
-</div>
