--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -1,6 +1,9 @@
-<div style="margin-top: 45px;">
+<div style="margin-top: 20px;">
 <div class="row">
-<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+    <div class="col-xs-12 visible-xs search-menu">
+        <i class="fa fa-bars orange-color" ng-click="searchMenu()"></i>
+    </div>
+<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 hide-xs" ng-class="{'show-xs': toggleMenu}">
     <h4 class="search-results-title"><i class="soap-icon-search"></i><b>{{searchMdl.resultCount}}</b> results found.
     </h4>
 
@@ -115,7 +118,7 @@
             </li>
         </ul>
     </div>
-    <div ng-show="searchMdl.display=='list'" class="hotel-list listing-style3 hotel">
+    <div ng-show="searchMdl.display=='list'" class="hotel-list listing-style3 hotel no-margin-xs">
         <article class="box" ng-repeat="pro in searchMdl.products track by pro.id">
             <figure class="col-lg-4 col-md-4 col-sm-12 col-xs-12 search-img">
                 <a ui-sref="main.equiDetails({id:pro.id})" class="hover-effect">
