--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -170,8 +170,8 @@
 		</div>
 		<hr>
 		<div class="from-group block">
-			<button type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
-			<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.equipments.list">CANCEL</button>
+			<button type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'Save' : 'Add Equipment'}}</button>
+			<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.equipments.list">Cancel</button>
 		</div>
 	</form>
 </div>
