--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -91,7 +91,7 @@
 			<p>Date: <span class="pull-right">Jan 28, 2015</span></p>
 			<p>{{item.invoice.is_paid ? 'Paid' : 'Not Paid'}}</p>
 			<p>${{item.total}}</p>
-			<p>{{item.is_approve ? 'Approved' : 'Not Approved'}} <a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right btn small-btn secondary-btn">View</a></p>
+			<p>{{item.is_approve ? 'Approved' : 'Not Approved'}} <a ui-sref="main.sellerAccount.invoices.view({id:item.id})" class="pull-right btn small-btn secondary-btn">View</a></p>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 				<hr style="margin-top: 15px;"/>
 			</div>
