--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col no-padding">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col buyer-invoice-btn no-padding">
 		<button class="btn all-btn uppercase pull-left primary-btn" ui-sref="main.sellerAccount.invoices.list">
 			<i class="fa fa-chevron-left"></i> &nbsp
 			Back to Invoice List</button>
@@ -39,7 +39,6 @@
 		</div>
 	</div>
 </div>
-<div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col">
 		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 pull-center">
 			<img src="http://placehold.it/80x80" alt="">
@@ -59,7 +58,7 @@
 				<p>Additional <span class="pull-right">$230</span></p>
 			</div>
 		</div>
-		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
+		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs no-padding">
 			<h4>$1200</h4>
 		</div>
 	</div>
@@ -80,5 +79,4 @@
 			</div>
 		</div>
 	</div>
-</div>
 
