--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -38,11 +38,11 @@
         <div class="devider"></div>
     </div>
     <div class="col-xs-12" ng-if="!charge.edit">
-        <a class="clickable-icon pointerhover" ng-click="chargesMdl.edit(charge)">
-          <i class="fa fa-pencil-square-o"></i>
+        <a class="btn small-btn secondary-btn" ng-click="chargesMdl.edit(charge)">
+          Edit
         </a>
-        <a class="clickable-icon pointerhover pull-right" ng-click="chargesMdl.delete(charge)">
-          <i class="fa fa-trash"></i>
+        <a class="btn small-btn secondary-btn pull-right" ng-click="chargesMdl.delete(charge)">
+          Delete
         </a>
     </div>
     <div class="col-xs-12" ng-if="charge.edit">
