loader map and other bugs

--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -200,7 +200,7 @@
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 total-amount-col">
-				<p class="pull-right">Amount Payable: &nbsp<span>$3200.00</span></p>
+				<p class="pull-right">Amount Payable: &nbsp<span>${{mdl.total}}</span></p>
 			</div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
