--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -6,7 +6,7 @@
             <li ng-class="{'active':mdl.tab1=='photos'}"><a ng-click="mdl.tab1='photos'">photos</a></li>
             <li ng-class="{'active':mdl.tab1=='map'}"><a ng-click="mdl.tab1='map'">Location on Map</a></li>
             <li class="hidden-xs" ng-class="{'active':mdl.tab1=='calendar'}"><a ng-click="mdl.tab1='calendar'">Availability Calendar</a></li>
-            <li class="pull-right hidden-xs"><a class="button btn-small yellow-bg white-color">Download Brochure</a></li>
+            <!--<li class="pull-right hidden-xs"><a class="button btn-small yellow-bg white-color">Download Brochure</a></li>-->
         </ul>
         <ul class="tabs visible-xs">
             <li ng-class="{'active':mdl.tab1=='calendar'}"><a ng-click="mdl.tab1='calendar'">Availability Calendar</a></li>
