--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,6 +1,6 @@
-<div class="loaderDiv" loader>
+<!--<div class="loaderDiv" loader>
   <img src="assets/images/loader.gif" class="ajax-loader"/>
-</div>
+</div>-->
 
 <div>
 	<header scroll id="header" class="navbar-static-top style2">
